--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -86,6 +86,11 @@ body {
     color: rgba(0,0,0,1);
     border-bottom: 5px solid transparent;
 }
+.masthead-nav > li > a.active {
+    background-color: transparent;
+    border-bottom-color: #a9a9a9;
+    border-bottom-color: rgba(200,200,200,1);
+}
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
     background-color: transparent;
