--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -246,3 +246,109 @@ body {
         width: 1200px;
     }
 }
+
+/*
+ * About
+ */
+ .subtitle{
+    background-color: #C4C4C4;
+    border: 1px ;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding:35px;
+    
+ }
+ .dashline{
+    border-bottom:1px dashed #C4C4C4;
+ }
+ .partnerimg{
+    background-color: #EAEAEA;
+    border-bottom:1px dashed #C4C4C4;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding:175px;
+ }
+ 
+ /*
+ * ul
+ */
+ .wrapper {
+  padding: 0px;
+  width:750px;
+ 
+  }
+  #left{
+  float:left;
+  }
+  #left img{ width:386px; height:320px
+  }
+  #right{
+  margin-left:34%;
+  }
+  /* Callback example */
+
+
+.callbacks_container {
+  margin-bottom: 30px;
+  position: relative;
+  float: right;
+  width: 100%;
+  }
+
+.callbacks {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
+
+.callbacks li {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.callbacks img {
+  display: block;
+  position: relative;
+  z-index: 1;
+  height: auto;
+  width:100%;
+  border: 0;
+  }
+
+
+.callbacks_nav {
+  position: absolute;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  top: 60%;
+  left: 0;
+  opacity: 0.3;
+  z-index: 3;
+  text-indent: -9999px;
+  overflow: hidden;
+  text-decoration: none;
+  height: 61px;
+  width: 38px;
+  background: transparent url("themes.gif") no-repeat left top;
+  margin-top: -45px;
+  }
+
+.callbacks_nav:active {
+  opacity: 1.0;
+  }
+
+.callbacks_nav.next {
+  left: auto;
+  background-position: right top;
+  right: 0;
+  }
+@media screen and (max-width:600px) {
+  .callbacks_nav {
+    top: 100%;
+    }
+  }
+ 
