--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -2,23 +2,9 @@
  * Globals
  */
 #class1content {
-    background-color: #dddddd;
+    background-color: #bbbbbb;
     overflow:hidden;
     display:none;
-}
-.searchcontent{
-    display:inline-block;
-    width:200px;
-}
-.iconcust{
-    float:right;
-}
-.searchcontentdiv{
-    display:inline-block;
-    width:150px;
-    border:1px solid #aaaaaa;
-    margin-left: 25px;
-    margin-right: 25px;
 }
 .dropdownmenucust{
     border: #bbbbbb;
@@ -272,6 +258,8 @@ body {
     margin-bottom: 0;
     margin-top: 0;
     padding:35px;
+    font-size:20px;
+    color:#555555;
     
  }
  .dashline{
@@ -418,7 +406,10 @@ body {
  */
   .plat-subtitle{
   width:auto;
-  height:30px;
-  background-color:#C8C8C8;
+  height:80px;
+  background-color:#EAEAEA;
+  }
+  .plat-subtitle img{
+  height:80px;
   }
  
