--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -1,15 +1,64 @@
 /*
  * Globals
  */
+.dropdownmenucust{
+    border: #bbbbbb;
+    border-radius: 0px;
+    background-color: #bbbbbb;
+}
+.dropdownmenucust li{
+    width:100%!important;
+}
+.dropdowndepart{
+    width:100%;
+    margin-top:0px;
+    margin-left:0px;
+    margin-right:0px;
+}
+.navcust{
+    width:100%;
+    float:left !important;
+}
+.navcust li{
+    width:20%;
+    margin-left:0px!important;
+    margin-right:0px!important;
+}
 #class1content {
     background-color: #bbbbbb;
     overflow:hidden;
     display:none;
 }
-.dropdownmenucust{
-    border: #bbbbbb;
-    border-radius: 0px;
-    background-color: #bbbbbb;
+.resetsearch{
+    color:#ddd;
+    margin-left:10px;
+    text-decoration: none;
+}
+.resetsearch:focus{
+    color:#ddd;
+    margin-left:10px;
+    text-decoration: none;
+}
+.resetsearch:hover{
+    color:#ddd;
+    margin-left:10px;
+    text-decoration: none;
+}
+.searchcontent{
+    display:inline-block;
+    width:150px;
+}
+.searchcontentdiv{
+    display:inline-block;
+    width:150px;
+    color:#ddd;
+    border:1px solid #ddd;
+    margin-left: 10px;
+    margin-right:10px;
+}
+.iconcust{
+    float:right;
+    color:#ddd;
 }
 .footerrightdiv{
     display:inline;
@@ -85,6 +134,24 @@
     margin-bottom: 5px;
     text-align:left;
 
+}
+.imagearea{
+    padding: 0px;
+    width:auto;
+}
+.imagearea img{
+    padding: 0px;
+    width:100%;
+    height:100%
+}
+.videoarea{
+    padding: 0px;
+    width:auto;
+}
+.videoarea video{
+    padding: 0px;
+    width:100%;
+    height:100%
 }
 /* Links */
 a,
