--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -1,6 +1,30 @@
 /*
  * Globals
  */
+.footerstyle{
+    height:300px;
+}
+.musictype{
+    width:50%;
+    float:left;
+    height:60px;
+}
+.musictypetitle{
+    width:40%;
+    background-color: #bbb;
+    height:60px;
+    text-align: center;
+    float:left;
+}
+.musictypedetails{
+    width:60%;
+    height:60px;
+    float:left;
+}
+.musictypedetail{
+    width:25%;
+    float:left;
+}
 .diftype{
     width:25%;
     float:left;
@@ -70,13 +94,19 @@
 .footerrightdiv{
     display:inline;
     float:right;
-    width: 300px;
+    width: 40%;
+    margin-bottom: 20px;
+    margin-top: 150px;
+    text-align: right;
 }
 .footerleftdiv{
     display:inline;
+    margin-bottom: 20px;
+    margin-top: 20px;
     float:left;
-    width:150px;
+    width:15%;
     border-right: 1px solid #bbbbbb;
+    height:300px;
 }
 
 .newborder{
