--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -1,6 +1,52 @@
 /*
  * Globals
  */
+.searchresult{
+    margin-bottom: 20px;
+    border-top:1px dotted #bbb;
+    height: 280px;
+}
+.searchresulta{
+    margin-bottom: 20px;
+    width:30%;
+    float:left;
+    background-color: #0000FF;
+    height: 280px;
+}
+.searchresultb{
+    margin-bottom: 20px;
+    width:60%;
+    float:left;
+    background-color: #2aabd2;
+    height: 280px;
+}
+.searchresultc{
+    margin-bottom: 20px;
+    width:10%;
+    float:left;
+    background-color: #9acfea;
+    height: 280px;
+}
+#bg{
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    background-color: black;
+    z-index:1001;
+    -moz-opacity: 0.7;
+    opacity:.70;
+    filter: alpha(opacity=70);}
+.showsearcharea{
+    position:relative;
+    z-index:1002!important;
+}
+.showsearcharea1{
+    height: 30px !important;
+    padding-top:0px!important;
+    padding-bottom: 0px!important;
+    background-color: #fff}
 .footerstyle{
     height:300px;
 }
@@ -121,7 +167,7 @@
 .language{
     padding:0px;
     margin-left: 15px;
-    margin-top:-10px;
+    margin-top:5px;
     float:left;
 }
 .search{
@@ -130,7 +176,7 @@
     float:right;
 }
 .searcharea{
-    margin-top: -7px;
+    margin-top: 5px;
     margin-right:20px;
     float:right;
 }
