--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -30,9 +30,8 @@
 #bg{
     display: none;
     position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
+    top: 0;
+    left: 0;
     background-color: black;
     z-index:1001;
     -moz-opacity: 0.7;
@@ -418,6 +417,9 @@ body {
     .mastfoot,
     .cover-container {
         width: 1200px;
+    }
+    .searchbg{
+        width:1200px;
     }
 }
 
