css update[search

--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -249,12 +249,15 @@
  * paltform
  */
   .plat-subtitle{
+  margin-top:30px;
+  margin-bottom:30px;
   width:auto;
-  height:80px;
+  height:100px;
   background-color:#EAEAEA;
   }
   .plat-subtitle img{
-  height:80px;
+  margin-top:-20px;
+  height:140px;
   }
   
       /*
