--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -32,7 +32,7 @@
     display: none;
     position: absolute;
     margin-left:75px;
-    top:560px;
+    top:580px;
     left: 0;
     background-color: #000000;
     z-index:1001;
@@ -43,7 +43,9 @@
     position:relative;
     z-index:1002!important;
     background-color: #fff;
-    
+    padding-left:30px;
+    padding-right:30px;
+    margin-top:10px;
     
 }
 .showsearcharea1{
@@ -86,9 +88,9 @@
     width:100%;
 }
 .dropdownmenucust{
-    border: #bbbbbb;
+    border:#e4e4e4;
     border-radius: 0px;
-    background-color: #bbbbbb;
+    background-color: #e4e4e4;
     position:absolute ;
     z-index:1004;
 
