--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -256,8 +256,8 @@
   background-color:#EAEAEA;
   }
   .plat-subtitle img{
-  margin-top:-20px;
-  height:140px;
+  margin-top:10px;
+  height:80px;
   }
   
       /*
@@ -295,11 +295,14 @@
  width:100%;
  }
 .joininfo{
-height:200px;
+height:400px;
 width:100%;
+
 }
  .join-masthead-nav > li {
     display: inline-block;
+    float:left;
+    width:25%;
    
 }
 .join-masthead-nav > li + li {
@@ -308,23 +311,23 @@ width:100%;
 }
 .join-masthead-nav > li > a {
 	height:50px;
-	
+	width:100%;
 	margin-top:40px;
-    margin-right: 40px;
-    mmargin-left: 40px;
+    margin-right: 0px;
+    mmargin-left:0px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
     color: #808080; /* IE8 proofing */
-    color: rgba(0,0,0,1);
-    border-bottom: 4px solid transparent;
+   
+    border-bottom: 1px solid  transparent;
     text-align:center;
     
     
 }
 .join-masthead-nav > li > a.active {
     background-color: transparent;
-    border-bottom-color: #a9a9a9;
-    border-bottom-color: rgba(200,200,200,1);
+    border-bottom-color: #e4e4e4;
+   
    
 }
    
@@ -333,8 +336,8 @@ width:100%;
 .join-masthead-nav > li > a:hover,
 .join-masthead-nav > li > a:focus {
     background-color: transparent;
-    border-bottom-color: #a9a9a9;
-    border-bottom-color: rgba(200,200,200,1);
+    border-bottom-color: #ffffff;
+   
 }
 .join-masthead-nav > .active > a,
 .join-masthead-nav > .active > a:hover,
@@ -343,20 +346,21 @@ width:100%;
     border-bottom-color: #fff;
 }
 
-.join-dropdownmenucust{
-    border: #bbbbbb;
+.join-dropdownmenucust{	
+    border: #808080;
     border-radius: 0px;
-    background-color: #bbbbbb;
+    background-color: #fff;
 }
+
 .join-dropdowncust{
     text-decoration: none;
-    color:#ffffff;
+    color:#808080;
 }
 .join-dropdowncust:focus{
     text-decoration: none;
-    color:#000;
+    color:#808080;
 }
 .join-dropdowncust:hover{
     text-decoration: none;
-    color:#000;
+    color:#808080;
 }
