--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -1,6 +1,9 @@
 /*
  * Globals
  */
+.navtags{
+    text-align: center;
+}
 .ulinnera{
     width:60%;
     display: inline-block;
@@ -385,8 +388,6 @@ body {
 
 	height:90px;
     margin-top:40px;
-    padding-right: 30px;
-    padding-left: 0;
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
