--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -10,9 +10,19 @@
     border-right:1px solid #bbb;
 
 }
-.relatedvideos{
-    width:33%;
+.relatedvideoarea > div{
     display: inline-block;
+    float: left;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top:5px;
+    margin-bottom:5px;
+}
+.relatedvideos{
+    height:300px;
+    width:31%;
+    display: inline-block;
+    background-color: #761c19;
 }
 .ulinnerb{
     width:30%;
@@ -55,7 +65,8 @@
     z-index:1001;
     -moz-opacity: 0.4;
     opacity:.40;
-    filter: alpha(opacity=40);}
+    filter: alpha(opacity=40);
+}
 .showsearcharea{
     position:relative;
     z-index:1002!important;
@@ -483,7 +494,7 @@ body {
     }
     .searchbg{
         width:1200px;
-        
+
     }
 }
 
