--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -364,3 +364,24 @@ width:100%;
     text-decoration: none;
     color:#808080;
 }
+
+
+
+
+  /*
+ * inner
+ */
+
+
+.ulinner-subtitle{
+    background-color:#541B2A;
+    border: 1px ;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding:15px;
+    font-size:20px;
+    color:#555555;
+    
+ }
+ .ulinner-subtitle img{
+ }
