--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -1,20 +1,29 @@
 /*
  * Globals
  */
+.homeimagearea2bg{
+    background-color: #541B2A;
+ }
+.homeimagearea3bg{
+    background-color: #0F366A;
+}
+.homeimagearea4bg{
+    background-color: #c8c8c8;
+}
 .homeimagearea1:hover{
-    opacity:0.8;
+    opacity:0.4;
     background-color: rgb(168, 60, 72);
 }
 .homeimagearea2:hover{
-    opacity:0.8;
+    opacity:0.4;
     background-color: #541B2A;
 }
 .homeimagearea3:hover{
-    opacity:0.8;
+    opacity:0.4;
     background-color: #0F366A;
 }
 .homeimagearea4:hover{
-    opacity:0.8;
+    opacity:0.4;
     background-color: #c8c8c8;
 }
 .navtags{
