--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -13,8 +13,11 @@
  }
  .dashline{
     border-bottom:2px dotted #C4C4C4;   
-    margin-top:30px;
+   
     height:auto;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding:0;
  }
  .shortdashline{
     border-bottom:2px dotted #C4C4C4 ;
@@ -152,8 +155,18 @@
 .videoslug {
 	font-size:10px;
 	text-align:left;
-	margin-bottom:15px;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding:0;
+    height:30px;
 	
+}
+
+.ulsearch{
+	margin-bottom: 0;
+    margin-top: 0;
+    padding:0;
+    heigt:50px;
 }
   
    /*
