--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -158,7 +158,8 @@
     margin-bottom: 0;
     margin-top: 0;
     padding:0;
-    height:30px;
+    height:50px;
+    padding-top:20px;
 	
 }
 
@@ -166,8 +167,9 @@
 	margin-bottom: 0;
     margin-top: 0;
     padding:0;
-    heigt:50px;
+    height:80px;
 }
+
   
    /*
  * music
