--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -1,10 +1,10 @@
-.dropdown-menu{
+.headernav{
     top:55%;
     left:-50%;
     padding:0;
     text-align: center;
 }
-.dropdown-menu>li>a {
+.headernav>li>a {
     display: block;
     padding: 3px 20px;
     clear: both;
@@ -14,7 +14,7 @@
     white-space: nowrap;
     border-top: 1px solid #fff;
  }
- .dropdown-menu>li>a:hover{
+ .headernav>li>a:hover{
      background-color: #636363;
      left:-15%;
      width:130%;
