--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -13,51 +13,52 @@
     padding-left: 5%;
     padding-right: 5%;
 }
-.jobcommit{
-    text-align: left;
+.jobcommit{ 
+	text-align: left;
     padding-top: 30px;
     padding-left: 5%;
     padding-right: 5%;
-    margin-bottom: 30px;
+    height:80px;
+    
 }
-.jobcommitbtn{
-    width: 90px;
-    height: 30px;
-    font-size:larger;
-    padding-left: 2px;
-    padding-top: 2px;
-    padding-right: 2px;
-    padding-bottom: 2px;
-    background-color: red;
-    border-bottom-left-radius:0px;
-    border-bottom-right-radius:0px;
-    border-top-left-radius:0px;
-    border-top-right-radius:0px;
-
+.jobcommitbtn{ 
+	float:left;
+	font-size:8px;
+	padding:5px;
+    height:30px;
+    width:70px;
+    background-color: #b70000;   
+    border-radius:0;
+    border-color:#b70000; 
 }
 .jobname{
     text-align: left;
-    padding-top: 30px;
-    padding-left: 5%;
-    padding-right: 5%;
+    margin-top: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-bottom: 30px;
     font-size: large;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
+    color:#808080;
+    border-bottom:1px solid #c0c0c0;
 }
 
 .gzzz{
     text-align: left;
-    padding-top: 30px;
-    padding-left: 5%;
-    padding-right: 5%;
-    font-size: larger;
+    margin-top: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 15px;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
+    color:#808080;
 }
 
 .departcontent{
     text-align: left;
-    padding-left: 5%;
-    padding-right: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
+    color:#808080;
 }
 
 .homeimagearea2bg{
