--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -5,23 +5,68 @@
     padding-left:30px;
     padding-right:30px;
 }
+.sendmailtext{
+	text-align: left;
+    font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
+    padding-left: 3%;
+    padding-right: 3%;
+    font-size:18px;
+    margin-top:15px;
+    padding-bottom:15px;
+    color:#5a5a5a;
+    border-bottom:1px solid #c0c0c0;
+	
+}
+.sendcommitbtn{
+	float:left;
+	font-size:8px;
+	padding:5px;
+    height:30px;
+    width:70px;
+    background-color: #b70000;   
+    border-radius:0;
+    border-color:#b70000; 
+ 
+	
+}
+.sendcanclebtn{
+	float:left;
+	font-size:8px;
+	padding:5px;
+    height:30px;
+    width:70px;
+    background-color: #b70000;   
+    border-radius:0;
+    border-color:#b70000; 
+	
+}
+.sendbtn{
+	    padding-left: 3%;
+    padding-right: 3%;
+}
 .jobinfoinput{
     text-align: left;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 3%;
+    padding-right: 3%;
+  
+   
 }
+
 .jobinfotext{
     text-align: left;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 3%;
+    padding-right: 3%;
+    font-size:10px;
+    margin-top:20px;
+    color:#5a5a5a;
 }
 .jobcommit{ 
 	text-align: left;
     padding-top: 30px;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 3%;
+    padding-right: 3%;
     height:80px;
     
 }
@@ -38,8 +83,8 @@
 .jobname{
     text-align: left;
     margin-top: 30px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
     padding-bottom: 30px;
     font-size: large;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
@@ -49,20 +94,21 @@
 
 .gzzz{
     text-align: left;
-    margin-top: 30px;
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: 15px;
+    margin-top: 20px;
+    margin-left: 3%;
+    margin-right: 3%;
+    font-size: 10px;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
     color:#808080;
 }
 
 .departcontent{
     text-align: left;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
     color:#808080;
+    font-size: 10px;
 }
 
 .homeimagearea2bg{
@@ -99,20 +145,22 @@
     border-right:1px solid #bbb;
 
 }
-.relatedvideoarea > div{
-	
-    display: inline-block;
-    float: left;
-    margin-left: 30px;   
+.relatedvideoarea{
+	width:100%;
+    display: inline-block;     
     margin-top:30px;
-    margin-bottom:5px;
+    padding-bottom:5px;
 
 }
 .relatedvideos{
+	float:left;
     height:200px;
-    width:29%;
+    width:30%;
     display: inline-block;
-    background-color: #761c19;
+    background-color: #c0c0c0;
+    margin-right:3%;
+    margin-bottom:40px;
+    border
 }
 .ulinnerb{
     width:30%;
@@ -192,6 +240,7 @@
     height:55px;
     padding:15px;
     border:1px solid #fff;
+    color:#808080;
 }
 .musictypedetails{
     width:60%;
@@ -210,7 +259,7 @@
     height:55px;
     padding:15px;
     border:1px solid #fff;
-   
+    color:#808080;
 }
 .platform-sub{
     width:100%;
@@ -496,7 +545,10 @@ body {
     
     
 }
-
+.masthead-brand img{
+	height:85px;
+	
+}
 .masthead-nav > li {
     display: inline-block;
     
