--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -51,3 +51,31 @@
     /*opacity:0.8;*/
     /*background-color: rgb(168, 60, 72);*/
 /*}*/
+#class1content{
+   background-color: #e8e8e8;
+}
+.searchdetailarea {
+    background-color: #e8e8e8;
+}
+.glyphicon {
+    top: 3px;
+    right: 2px;
+}
+.iconcust{
+    color:#808399;
+}
+#rearch_reset{
+    line-height: 2px;
+    vertical-align: middle;
+}
+input[type=checkbox], input[type=radio] {
+    vertical-align: middle;
+    margin:0;
+}
+.searchItem{
+    vertical-align: middle;
+    margin-left: 5px;
+}
+/*input[type="checkbox"]:checked {
+    background-color:red;
+}*/
