--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -461,13 +461,15 @@
     height:100%
 }
 .videoarea{
-    padding: 0px;
-    width:auto;
+    margin: 0px;
+    width:100%;
+    height:720px;
+
 }
 .videoarea video{
-    padding: 0px;
+    margin-top: -12px;
     width:100%;
-    height:100%
+    height:700px;
 }
 /* Links */
 a,
