--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -202,7 +202,7 @@
   display: block;
   position: relative;
   z-index: 1;
-  height:500px;
+  height:550px;
   width:100%;
   border: 0;
   }
@@ -286,6 +286,7 @@
       /*
  * home
  */
+
  .homeborder{
  padding:0px;
  width:100%;
@@ -296,12 +297,12 @@
   .homeborder1{
  padding:0px;
  width:100%;
- height:500px;
+ height:550px;
  margin:0px;
 
  }
  .homewrapper1{
-  height:500px;
+  height:550px;
   width:auto;
  }
  .homewrapper2{
@@ -313,38 +314,36 @@
   /*
  * join
  */
- .videoarea{
- height:500px;
- width:100%;
- }
+
 .joininfo{
-height:400px;
-width:100%;
+margin-top:20px;
+height:300px;
+margin-left:0px;
 
 }
+
  .join-masthead-nav > li {
     display: inline-block;
     float:left;
     width:25%;
-   
+    height:40px;
+    margin-top:10px;
+    margin-bottom:10px;
+    
+  
 }
 .join-masthead-nav > li + li {
     margin-left: 0px;
  
 }
 .join-masthead-nav > li > a {
-	height:50px;
-	width:100%;
-	margin-top:40px;
-    margin-right: 0px;
-    mmargin-left:0px;
+	height:30px;	
     font-size: 14px;
     font-weight: 500;
-    color: #808080; /* IE8 proofing */
-   
-  
-    text-align:center;
-    
+    color: #808080; /* IE8 proofing */ 
+    text-align:center;  
+    overflow:hidden;
+    border-right:1px solid #808080;
     
 }
 .join-masthead-nav > li > a.active {
@@ -359,25 +358,27 @@ width:100%;
 .join-masthead-nav > li > a:hover,
 .join-masthead-nav > li > a:focus {
     background-color: transparent;
-    border-bottom-color: #ffffff;
+    
    
 }
 .join-masthead-nav > .active > a,
 .join-masthead-nav > .active > a:hover,
 .join-masthead-nav > .active > a:focus {
     color: #fff;
-    border-bottom-color: #fff;
+   
 }
 
 .join-dropdownmenucust{	
     border: #808080;
     border-radius: 0px;
     background-color: #fff;
+
 }
 
 .join-dropdowncust{
     text-decoration: none;
     color:#808080;
+ 
 }
 .join-dropdowncust:focus{
     text-decoration: none;
@@ -408,3 +409,77 @@ width:100%;
  }
  .ulinner-subtitle img{
  }
+
+ 
+  /*
+ * partner
+ */
+ .ptn-border{
+ padding:0px;
+ width:100%;
+ height:700px;
+ margin:0px;
+
+ }
+ .ptn-wrapper{
+  height:700px;
+  width:auto;
+ }
+.ptn-callbacks_container {
+  margin-bottom: 0px;
+  position: relative;
+  float: right;
+  width: 100%;
+  }
+
+.ptn-callbacks {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
+
+.ptn-callbacks li {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.ptn-callbacks img {
+  display: block;
+  position: relative;
+  z-index: 1;
+  height: 700px;
+  width:100%;
+  border: 0;
+  }
+
+
+.ptn-callbacks_nav {
+  position: absolute;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  top: 60%;
+  left: 0;
+  opacity: 0.3;
+  z-index: 3;
+  text-indent: -9999px;
+  overflow: hidden;
+  text-decoration: none;
+  height: 61px;
+  width: 38px;
+  background: transparent url("themes.gif") no-repeat left top;
+  margin-top: -45px;
+  }
+
+.ptn-callbacks_nav:active {
+  opacity: 1.0;
+  }
+
+.ptn-callbacks_nav.next {
+  left: auto;
+  background-position: right top;
+  right: 0;
+  }
