--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -160,7 +160,7 @@
     background-color: #c0c0c0;
     margin-right:3%;
     margin-bottom:40px;
-    border
+    border:0;
 }
 .ulinnerb{
     width:30%;
@@ -274,7 +274,7 @@
    
 }
 .dropdownmenucust li{
-    width:100%!important;
+    width:100%;
     background-color: #e4e4e4;
 }
 .dropdowndepart{
