--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -104,3 +104,27 @@ input[type=checkbox], input[type=radio] {
      font-size:13pt;
      position:relative;
  }
+ .searchcontentdiv {
+     display: inline-block;
+     width: 80px;
+     text-align:center;
+     color: #808080;
+     border: 1px solid #A9A9A9;
+ }
+ #searchMsg{
+     float:left;
+ }
+ #searchinput{
+     margin-top: -2px;
+     float:left;
+ }
+ #searchcommit{
+      float:left;
+ }
+ #searchreset{
+      float:left;
+ }
+ .glyphicon{
+      top:2px;
+      right:0px;
+ }
