--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -158,12 +158,14 @@
     width:30%;
     display: inline-block;
     background-color: #c0c0c0;
-    margin-right:3%;
+    margin-right:40px;
     margin-bottom:40px;
     border
 }
 .ulinnerb{
-    width:30%;
+	padding-left:20px;
+	float:right;
+    border-left:1px solid #808080;
     display: inline-block;
 }
 .searchresult{
@@ -588,9 +590,23 @@ body {
 .masthead-nav > .active > a:focus {
     color: #fff;
     border-bottom-color: #fff;
-    background-color:#e4e4e4;
 }
 
+
+#ulli > a:hover,a:focus{
+	background-color: transparent;
+    border-bottom-color: #A73D49;
+    
+	
+}
+
+
+#awoeli > a:hover,a:focus{
+	background-color: transparent;
+    border-bottom-color: #3D5C9A;
+    
+	
+}
 @media (min-width: 768px) {
     .masthead-brand {
         float: left;
