--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -410,7 +410,15 @@ margin-left:0px;
  .ulinner-subtitle img{
  }
 
+#share a{width:30px;height:30px;padding:0;margin:6px;}
+#share a.bds_weixin{background:url(../../bootstrap/images/wx.png)no-repeat;background-size:25px 25px;}
+#share a.bds_tsina{background:url(../../bootstrap/images/sn.png)no-repeat;background-size:25px 25px;}
+#share a.bds_qzone{background:url(../../bootstrap/images/qz.png)no-repeat;background-size:25px 25px;}
+#share a.bds_sqq{background:url(../../bootstrap/images/qq.png)no-repeat;background-size:25px 25px;}
  
+#sharetext{
+	font-size:15px;
+}
   /*
  * partner
  */
