--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -312,7 +312,7 @@
     float:left !important;
 }
 .navcust li{
-    width:20%;
+    /*width:20%;*/
     margin-left:0px!important;
     margin-right:0px!important;
 }
@@ -498,6 +498,7 @@ a:hover {
 html,
 body {
     height: 100%;
+    font-size: 10px;
     background-color: #ffffff;
 }
 body {
