--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -18,10 +18,10 @@
      background-color: #636363;
      left:-15%;
      width:130%;
-     line-height:30px;
+     line-height:35px;
      vertical-align:middle;
      color:#fff;
-     font-size:12pt;
+     font-size:14pt;
      position:relative;
  }
 .dropdownmenucust li{
@@ -65,7 +65,7 @@
     color:#808399;
 }
 #rearch_reset{
-    line-height: 2px;
+    line-height: 1px;
     vertical-align: middle;
 }
 input[type=checkbox], input[type=radio] {
@@ -115,8 +115,10 @@ input[type=checkbox], input[type=radio] {
      float:left;
  }
  #searchinput{
-     margin-top: -2px;
+     margin-top: -1px;
      float:left;
+     height:20px;
+     width:30%;
  }
  #searchcommit{
       float:left;
@@ -127,4 +129,17 @@ input[type=checkbox], input[type=radio] {
  .glyphicon{
       top:2px;
       right:0px;
+ }
+ .dropdowndepart{
+    min-width: 60px;
+    left: 30%;
+ }
+ #searchTool{
+    float: left;
+    width: 20px;
+    height: 30px;
+    left: -17px;
+ }
+ #searchBrandName{
+    height:40px;
  }
