--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -37,10 +37,8 @@
 #bg {
     display: none;
     position: absolute;
-    /*margin-left: 3%;*/
-    /*margin-right: %;*/
+    margin-left: 3.5%;
     left: 0;
-    width: 100%;
     background-color: #000000;
     z-index: 1001;
     -moz-opacity: 0.4;
@@ -132,7 +130,7 @@ input[type=checkbox], input[type=radio] {
  }
  .dropdowndepart{
     min-width: 60px;
-    left: 30%;
+    left: 35%;
  }
  #searchTool{
     float: left;
@@ -142,4 +140,15 @@ input[type=checkbox], input[type=radio] {
  }
  #searchBrandName{
     height:40px;
+ }
+ @media screen and (max-width: 1000px) and (min-width:800px){
+    #bg{
+        margin-left: 1%;
+
+    }
+ }
+ @media screen and (max-width: 1100px) and (min-width:1000px){
+     #bg{
+        margin-left: 2%;
+     }
  }
