--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -176,9 +176,11 @@ text-align:center;
 padding-top:15px;
 }
 .uldetails{
+
 margin-top:20px;
 height:50px;
 border-right:1px solid #c0c0c0;
+color:#808080;
 }
   
    /*
