--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -267,8 +267,8 @@
     text-align:center;
 }
 .musictypedetail2{
-   margin-left:23px;
-   margin-right:7px;
+   margin-left:20px;
+   margin-right:0px;
     display:inline-block;
     color:#000;
    margin-bottom:10px;
@@ -545,7 +545,8 @@ body {
 .cover-container {
     margin-right: auto;
     margin-left: auto;
-  
+    padding:0;
+    width:100%;
     
     
 }
@@ -579,7 +580,6 @@ body {
 .masthead-nav > li {
     display: inline-block;
     
-    
 }
 .masthead-nav > li + li {
     margin-left: 20px;
@@ -591,28 +591,25 @@ body {
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
-   
-    border-bottom: 4px solid transparent;
+
     
 }
 .masthead-nav > li > a.active {
     background-color: transparent;
     border-bottom-color: #a9a9a9;
-   
-   
+    border-bottom: 4px solid #a9a9a9;
     
 }
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
-    background-color: transparent;
-    border-bottom-color: #a9a9a9;
-    
+    background-color: transparent;  
+    border-bottom: 4px solid #a9a9a9;
 }
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
-    color: #fff;
-    border-bottom-color: #fff;
+    color: #fff;  
+    border-bottom: 4px solid #a9a9a9;
 }
 
 
@@ -623,21 +620,18 @@ body {
 	
 }
 #ulli >a.active{
-	 background-color: transparent;
+    background-color: transparent;
     border-bottom-color: #A73D49;
 }
 
 #awoeli > a:hover,a:focus{
 	background-color: transparent;
-    border-bottom-color: #3D5C9A;
-    
-	
+    border-bottom-color: #3D5C9A;   	
 }
 
-
 #awoeli >a.active{
-	 background-color: transparent;
-    border-bottom-color: #3D5C9A;
+background-color: transparent;
+border-bottom-color: #3D5C9A;
 }
 @media (min-width: 768px) {
     .masthead-brand {
@@ -708,5 +702,47 @@ body {
         width:1200px;
 
     }
+}
+
+/* music */
+
+.musictype3{
+
+	margin-bottom:10px;
+    width:50%;
+    float:left;
+    height:auto;
+   
+}
+.musictypetitle3{
+	width:35%;
+    float:left;    
+    background-color: #e4e4e4;
+    height:55px;
+    padding:15px;
+    border:1px solid #fff;
+    color:#808080;
+}
+.musictypedetails3{
+    width:65%;
+    height:55px;
+    float:left;
+    
+}
+.musictypedetail3{
+    width:30%;
+    float:left;
+    color:#808080;
+    margin-top:15px;
+    margin-bottom:10px;
+    text-align:center;
+}
+.musictypedetail4{
+    width:20%;
+    float:left;
+    color:#808080;
+    margin-top:15px;
+    margin-bottom:10px;
+    text-align:center;
 }
 
