--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -178,8 +178,8 @@ margin-top:25px;
 height:50px;
 border-right:1px solid #c0c0c0;
 color:#808080;
-padding-left:35px;
-padding-right:35px;
+padding-left:25px;
+padding-right:25px;
 text-align:center;
 }
 .uldetails2{
@@ -623,4 +623,7 @@ margin-left:0px;
     width:18%;
     border-right: 1px solid #bbbbbb;
     height:230px;
+}
+.searchbg{
+	width:100%;
 }
