--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -42,6 +42,9 @@
     -moz-opacity: 0.4;
     opacity: .40;
     filter: alpha(opacity=40);
+    margin-top:10px;
+    min-width: 1000px; 
+ 
 }
 /*#left:hover{*/
     /*opacity:0.8;*/
@@ -146,12 +149,11 @@ input[type="checkbox"]:checked {
  }
  @media screen and (max-width: 1000px) and (min-width:800px){
     #bg{
-        margin-left: 1%;
-
+        
     }
  }
  @media screen and (max-width: 1100px) and (min-width:1000px){
      #bg{
-        margin-left: 2%;
+       
      }
  }
