--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -348,6 +348,28 @@ background: transparent url("color.gif") no-repeat left top;
   height:400px;
  }
  
+ .progress {
+  height: 25px;
+  width: 100%;
+  position: absolute;
+  top: 525px;
+
+  opacity: 0.3;
+  margin: 0;
+  z-index: 10;
+  border-radius: 0;
+ }
+ .oneProgress {
+  height: 5px;
+  margin-top: 12px;
+  background: #CCC;
+  display: inline-block;
+ }
+ .progressIng {
+  height: 100%;
+  background: #000;
+ }
+ 
   /*
  * join
  */
