--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -125,14 +125,14 @@
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   top: 60%;
-  left: 0;
+  left: 0px;
   opacity: 0.3;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
   text-decoration: none;
-  height: 61px;
-  width: 38px;
+  height: 60px;
+  width: 30px;
   background: transparent url("themes2.gif") no-repeat left top;
   margin-top: -45px;
   }
@@ -437,7 +437,7 @@ margin-left:0px;
 
 
 .ulinner-subtitle{
-    background-color:#541B2A;
+    background-color:#A73D49;
     border: 1px ;
     margin-bottom: 0;
     margin-top: 0;
