--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -630,15 +630,21 @@ body {
 #awoeli > a:hover,a:focus{
 	background-color: transparent;
     border-bottom-color: #3D5C9A;
-    
-	
 }
-
-
 #awoeli >a.active{
 	 background-color: transparent;
     border-bottom-color: #3D5C9A;
 }
+
+/*#music > a:hover,a:focus{
+    background-color: transparent;
+    border-bottom-color: green;
+}
+#music >a.active{
+    background-color: transparent;
+    border-bottom-color: green;
+}*/
+
 @media (min-width: 768px) {
     .masthead-brand {
         float: left;
