--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -124,7 +124,7 @@
 .callbacks_nav {
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 60%;
+  top: 53%;
   left: 0px;
   opacity: 0.3;
   z-index: 3;
@@ -178,11 +178,13 @@ margin-top:25px;
 height:50px;
 border-right:1px solid #c0c0c0;
 color:#808080;
-padding-left:25px;
-padding-right:25px;
+padding-left:30px;
+padding-right:30px;
 text-align:center;
 }
 .uldetails2{
+padding-left:15px;
+padding-right:15px;
 margin-top:25px;
 height:50px;
 border-right:1px solid #c0c0c0;
@@ -248,8 +250,8 @@ background: transparent url("color.gif") no-repeat left top;
 .music-callbacks_nav {
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 60%;
-  left: 0;
+  top: 53%;
+  left: 10px;
   opacity: 0.3;
   z-index: 3;
   text-indent: -9999px;
@@ -268,7 +270,7 @@ background: transparent url("color.gif") no-repeat left top;
 .music-callbacks_nav.next {
   left: auto;
   background-position: right top;
-  right: 0;
+  right: 10px;;
   }
 @media screen and (max-width:600px) {
   .music-callbacks_nav {
