--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -1,16 +1,7 @@
 /*
  * About
  */
- .subtitle{
-    background-color: #C4C4C4;
-    border: 1px ;
-    margin-bottom: 0;
-    margin-top: 0;
-    padding:35px;
-    font-size:20px;
-    color:#555555;
-    
- }
+
  .dashline{
     border-bottom:2px dotted #C4C4C4;   
    
@@ -437,7 +428,7 @@ margin-left:0px;
 
 
 .ulinner-subtitle{
-    background-color:#541B2A;
+    background-color:#a73d49;
     border: 1px ;
     margin-bottom: 0;
     margin-top: 0;
